--- a/game/cat-room-blast.html
+++ b/game/cat-room-blast.html
@@ -30,11 +30,11 @@
     <meta property="og:description" content="Join Cat Room Blast for fun match-3 puzzles with adorable cats! Solve challenges, decorate rooms, and unleash your creativity. Play now!">
     <meta property="og:type" content="game">
     <meta property="og:url" content="/game/cat-room-blast.html">
-    <meta property="og:image" content="/images/games/cat-room-blast.png">
+    <meta property="og:image" content="/images/game/cat-room-blast.png">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Cat Room Blast">
     <meta name="twitter:description" content="Join Cat Room Blast for fun match-3 puzzles with adorable cats! Solve challenges, decorate rooms, and unleash your creativity. Play now!">
-    <meta name="twitter:image" content="/images/games/cat-room-blast.png">
+    <meta name="twitter:image" content="/images/game/cat-room-blast.png">
     <link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon.png">
   <!-- Google tag  (gtag.js) -->
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-RF7NSZF0M6"></script>
@@ -128,7 +128,7 @@
                 <div draggable="true" id="mobile-back-button">
                   <i class="bi bi-x-circle-fill"></i>
                 </div>
-                <iframe allowfullscreen="" class="game-iframe lazyload" data-src="https://education76.github.io/g22/cat-room-blast" frameborder="0" height="480" id="game-area" scrolling="none" width="800"></iframe>
+                <iframe allowfullscreen="" class="game-iframe lazyload" src="https://education76.github.io/g22/cat-room-blast" frameborder="0" height="480" id="game-area" scrolling="none" width="800"></iframe>
               </div>
             </div>
             <div class="game-info">
@@ -273,7 +273,7 @@
             <div class="game-item">
               <div class="list-game">
                 <div class="list-thumbnail">
-                  <img alt="Kubi Pets" class="lazyload" src="/images/games/kubi-pets.png">
+                  <img alt="Kubi Pets" class="lazyload" src="/images/game/kubi-pets.png">
                 </div>
               </div>
               <span class="list-game-title">Kubi Pets</span>
@@ -285,7 +285,7 @@
             <div class="game-item">
               <div class="list-game">
                 <div class="list-thumbnail">
-                  <img alt="Sudoku Calendar" class="lazyload" src="/images/games/sudoku-calendar.png">
+                  <img alt="Sudoku Calendar" class="lazyload" src="/images/game/sudoku-calendar.png">
                 </div>
               </div>
               <span class="list-game-title">Sudoku Calendar</span>
@@ -297,7 +297,7 @@
             <div class="game-item">
               <div class="list-game">
                 <div class="list-thumbnail">
-                  <img alt="Village Craft" class="lazyload" src="/images/games/village-craft.png">
+                  <img alt="Village Craft" class="lazyload" src="/images/game/village-craft.png">
                 </div>
               </div>
               <span class="list-game-title">Village Craft</span>
@@ -309,7 +309,7 @@
             <div class="game-item">
               <div class="list-game">
                 <div class="list-thumbnail">
-                  <img alt="Become a Puppy Groomer" class="lazyload" src="/images/games/become-a-puppy-groomer.png">
+                  <img alt="Become a Puppy Groomer" class="lazyload" src="/images/game/become-a-puppy-groomer.png">
                 </div>
               </div>
               <span class="list-game-title">Become a Puppy Groomer</span>
@@ -321,7 +321,7 @@
             <div class="game-item">
               <div class="list-game">
                 <div class="list-thumbnail">
-                  <img alt="Farm Battles" class="lazyload" src="/images/games/farm-battles.png">
+                  <img alt="Farm Battles" class="lazyload" src="/images/game/farm-battles.png">
                 </div>
               </div>
               <span class="list-game-title">Farm Battles</span>
@@ -333,7 +333,7 @@
             <div class="game-item">
               <div class="list-game">
                 <div class="list-thumbnail">
-                  <img alt="Time Clones" class="lazyload" src="/images/games/time-clones.png">
+                  <img alt="Time Clones" class="lazyload" src="/images/game/time-clones.png">
                 </div>
               </div>
               <span class="list-game-title">Time Clones</span>
@@ -345,7 +345,7 @@
             <div class="game-item">
               <div class="list-game">
                 <div class="list-thumbnail">
-                  <img alt="1v1 Lol" class="lazyload" src="/images/games/1v1-lol.png">
+                  <img alt="1v1 Lol" class="lazyload" src="/images/game/1v1-lol.png">
                 </div>
               </div>
               <span class="list-game-title">1v1 Lol</span>
@@ -357,7 +357,7 @@
             <div class="game-item">
               <div class="list-game">
                 <div class="list-thumbnail">
-                  <img alt="Flip Runner" class="lazyload" src="/images/games/flip-runner.png">
+                  <img alt="Flip Runner" class="lazyload" src="/images/game/flip-runner.png">
                 </div>
               </div>
               <span class="list-game-title">Flip Runner</span>
@@ -369,7 +369,7 @@
             <div class="game-item">
               <div class="list-game">
                 <div class="list-thumbnail">
-                  <img alt="Duck Pond Mahjong" class="lazyload" src="/images/games/duck-pond-mahjong.png">
+                  <img alt="Duck Pond Mahjong" class="lazyload" src="/images/game/duck-pond-mahjong.png">
                 </div>
               </div>
               <span class="list-game-title">Duck Pond Mahjong</span>
@@ -381,7 +381,7 @@
             <div class="game-item">
               <div class="list-game">
                 <div class="list-thumbnail">
-                  <img alt="MadZOOng" class="lazyload" src="/images/games/madzoong.png">
+                  <img alt="MadZOOng" class="lazyload" src="/images/game/madzoong.png">
                 </div>
               </div>
               <span class="list-game-title">MadZOOng</span>
@@ -393,7 +393,7 @@
             <div class="game-item">
               <div class="list-game">
                 <div class="list-thumbnail">
-                  <img alt="Orange" class="lazyload" src="/images/games/orange.png">
+                  <img alt="Orange" class="lazyload" src="/images/game/orange.png">
                 </div>
               </div>
               <span class="list-game-title">Orange</span>
@@ -405,7 +405,7 @@
             <div class="game-item">
               <div class="list-game">
                 <div class="list-thumbnail">
-                  <img alt="Chicky Farm" class="lazyload" src="/images/games/chicky-farm.png">
+                  <img alt="Chicky Farm" class="lazyload" src="/images/game/chicky-farm.png">
                 </div>
               </div>
               <span class="list-game-title">Chicky Farm</span>
@@ -417,7 +417,7 @@
             <div class="game-item">
               <div class="list-game">
                 <div class="list-thumbnail">
-                  <img alt="Fireboy and Watergirl 4: Crystal Temple" class="lazyload" src="/images/games/fireboy-and-watergirl-4-crystal-temple.png">
+                  <img alt="Fireboy and Watergirl 4: Crystal Temple" class="lazyload" src="/images/game/fireboy-and-watergirl-4-crystal-temple.png">
                 </div>
               </div>
               <span class="list-game-title">Fireboy and Watergirl 4: Crystal Temple</span>
@@ -429,7 +429,7 @@
             <div class="game-item">
               <div class="list-game">
                 <div class="list-thumbnail">
-                  <img alt="Stickman Archero Fight" class="lazyload" src="/images/games/stickman-archero-fight.png">
+                  <img alt="Stickman Archero Fight" class="lazyload" src="/images/game/stickman-archero-fight.png">
                 </div>
               </div>
               <span class="list-game-title">Stickman Archero Fight</span>
@@ -441,7 +441,7 @@
             <div class="game-item">
               <div class="list-game">
                 <div class="list-thumbnail">
-                  <img alt="Mummys Path Deluxe" class="lazyload" src="/images/games/mummys-path-deluxe.png">
+                  <img alt="Mummys Path Deluxe" class="lazyload" src="/images/game/mummys-path-deluxe.png">
                 </div>
               </div>
               <span class="list-game-title">Mummys Path Deluxe</span>
@@ -453,7 +453,7 @@
             <div class="game-item">
               <div class="list-game">
                 <div class="list-thumbnail">
-                  <img alt="Photo Puzzle Slide Edition" class="lazyload" src="/images/games/photo-puzzle-slide-edition.png">
+                  <img alt="Photo Puzzle Slide Edition" class="lazyload" src="/images/game/photo-puzzle-slide-edition.png">
                 </div>
               </div>
               <span class="list-game-title">Photo Puzzle Slide Edition</span>
@@ -465,7 +465,7 @@
             <div class="game-item">
               <div class="list-game">
                 <div class="list-thumbnail">
-                  <img alt="Zooplop" class="lazyload" src="/images/games/zooplop.png">
+                  <img alt="Zooplop" class="lazyload" src="/images/game/zooplop.png">
                 </div>
               </div>
               <span class="list-game-title">Zooplop</span>
@@ -477,7 +477,7 @@
             <div class="game-item">
               <div class="list-game">
                 <div class="list-thumbnail">
-                  <img alt="Onet Fruit Classic" class="lazyload" src="/images/games/onet-fruit-classic.png">
+                  <img alt="Onet Fruit Classic" class="lazyload" src="/images/game/onet-fruit-classic.png">
                 </div>
               </div>
               <span class="list-game-title">Onet Fruit Classic</span>
@@ -494,7 +494,7 @@
             <div class="game-item">
               <div class="list-game">
                 <div class="list-thumbnail">
-                  <img alt="Flash Tetris" class="lazyload" src="/images/games/flash-tetris.png">
+                  <img alt="Flash Tetris" class="lazyload" src="/images/game/flash-tetris.png">
                 </div>
               </div>
               <span class="list-game-title">Flash Tetris</span>
@@ -506,7 +506,7 @@
             <div class="game-item">
               <div class="list-game">
                 <div class="list-thumbnail">
-                  <img alt="Thumb Fighter" class="lazyload" src="/images/games/thumb-fighter.png">
+                  <img alt="Thumb Fighter" class="lazyload" src="/images/game/thumb-fighter.png">
                 </div>
               </div>
               <span class="list-game-title">Thumb Fighter</span>
@@ -518,7 +518,7 @@
             <div class="game-item">
               <div class="list-game">
                 <div class="list-thumbnail">
-                  <img alt="Tunnel Rush" class="lazyload" src="/images/games/tunnel-rush.png">
+                  <img alt="Tunnel Rush" class="lazyload" src="/images/game/tunnel-rush.png">
                 </div>
               </div>
               <span class="list-game-title">Tunnel Rush</span>
@@ -530,7 +530,7 @@
             <div class="game-item">
               <div class="list-game">
                 <div class="list-thumbnail">
-                  <img alt="Tictactoe" class="lazyload" src="/images/games/tictactoe.png">
+                  <img alt="Tictactoe" class="lazyload" src="/images/game/tictactoe.png">
                 </div>
               </div>
               <span class="list-game-title">Tictactoe</span>
@@ -542,7 +542,7 @@
             <div class="game-item">
               <div class="list-game">
                 <div class="list-thumbnail">
-                  <img alt="Vex 7" class="lazyload" src="/images/games/vex-7.png">
+                  <img alt="Vex 7" class="lazyload" src="/images/game/vex-7.png">
                 </div>
               </div>
               <span class="list-game-title">Vex 7</span>
@@ -554,7 +554,7 @@
             <div class="game-item">
               <div class="list-game">
                 <div class="list-thumbnail">
-                  <img alt="G Switch 3" class="lazyload" src="/images/games/g-switch-3.png">
+                  <img alt="G Switch 3" class="lazyload" src="/images/game/g-switch-3.png">
                 </div>
               </div>
               <span class="list-game-title">G Switch 3</span>
@@ -566,7 +566,7 @@
             <div class="game-item">
               <div class="list-game">
                 <div class="list-thumbnail">
-                  <img alt="Stick Defenders" class="lazyload" src="/images/games/stick-defenders.png">
+                  <img alt="Stick Defenders" class="lazyload" src="/images/game/stick-defenders.png">
                 </div>
               </div>
               <span class="list-game-title">Stick Defenders</span>
@@ -578,7 +578,7 @@
             <div class="game-item">
               <div class="list-game">
                 <div class="list-thumbnail">
-                  <img alt="Funny Shooter 2" class="lazyload" src="/images/games/funny-shooter-2.png">
+                  <img alt="Funny Shooter 2" class="lazyload" src="/images/game/funny-shooter-2.png">
                 </div>
               </div>
               <span class="list-game-title">Funny Shooter 2</span>
@@ -590,7 +590,7 @@
             <div class="game-item">
               <div class="list-game">
                 <div class="list-thumbnail">
-                  <img alt="Wizard Mike" class="lazyload" src="/images/games/wizard-mike.png">
+                  <img alt="Wizard Mike" class="lazyload" src="/images/game/wizard-mike.png">
                 </div>
               </div>
               <span class="list-game-title">Wizard Mike</span>
@@ -602,7 +602,7 @@
             <div class="game-item">
               <div class="list-game">
                 <div class="list-thumbnail">
-                  <img alt="Swingo" class="lazyload" src="/images/games/swingo.png">
+                  <img alt="Swingo" class="lazyload" src="/images/game/swingo.png">
                 </div>
               </div>
               <span class="list-game-title">Swingo</span>
@@ -614,7 +614,7 @@
             <div class="game-item">
               <div class="list-game">
                 <div class="list-thumbnail">
-                  <img alt="Monster Tracks" class="lazyload" src="/images/games/monster-tracks.png">
+                  <img alt="Monster Tracks" class="lazyload" src="/images/game/monster-tracks.png">
                 </div>
               </div>
               <span class="list-game-title">Monster Tracks</span>
@@ -626,7 +626,7 @@
             <div class="game-item">
               <div class="list-game">
                 <div class="list-thumbnail">
-                  <img alt="Big Shot Boxing" class="lazyload" src="/images/games/big-shot-boxing.png">
+                  <img alt="Big Shot Boxing" class="lazyload" src="/images/game/big-shot-boxing.png">
                 </div>
               </div>
               <span class="list-game-title">Big Shot Boxing</span>
@@ -638,7 +638,7 @@
             <div class="game-item">
               <div class="list-game">
                 <div class="list-thumbnail">
-                  <img alt="Stack Bump 3D" class="lazyload" src="/images/games/stack-bump-3d.png">
+                  <img alt="Stack Bump 3D" class="lazyload" src="/images/game/stack-bump-3d.png">
                 </div>
               </div>
               <span class="list-game-title">Stack Bump 3D</span>
@@ -650,7 +650,7 @@
             <div class="game-item">
               <div class="list-game">
                 <div class="list-thumbnail">
-                  <img alt="Riddle School" class="lazyload" src="/images/games/riddle-school.png">
+                  <img alt="Riddle School" class="lazyload" src="/images/game/riddle-school.png">
                 </div>
               </div>
               <span class="list-game-title">Riddle School</span>
@@ -662,7 +662,7 @@
             <div class="game-item">
               <div class="list-game">
                 <div class="list-thumbnail">
-                  <img alt="Tiny Fishing" class="lazyload" src="/images/games/tiny-fishing.png">
+                  <img alt="Tiny Fishing" class="lazyload" src="/images/game/tiny-fishing.png">
                 </div>
               </div>
               <span class="list-game-title">Tiny Fishing</span>
@@ -674,7 +674,7 @@
             <div class="game-item">
               <div class="list-game">
                 <div class="list-thumbnail">
-                  <img alt="Retro Bowl" class="lazyload" src="/images/games/retro-bowl.png">
+                  <img alt="Retro Bowl" class="lazyload" src="/images/game/retro-bowl.png">
                 </div>
               </div>
               <span class="list-game-title">Retro Bowl</span>
@@ -686,7 +686,7 @@
             <div class="game-item">
               <div class="list-game">
                 <div class="list-thumbnail">
-                  <img alt="Escaping The Prison" class="lazyload" src="/images/games/escaping-the-prison.png">
+                  <img alt="Escaping The Prison" class="lazyload" src="/images/game/escaping-the-prison.png">
                 </div>
               </div>
               <span class="list-game-title">Escaping The Prison</span>
@@ -698,7 +698,7 @@
             <div class="game-item">
               <div class="list-game">
                 <div class="list-thumbnail">
-                  <img alt="Stickman Hook" class="lazyload" src="/images/games/stickman-hook.png">
+                  <img alt="Stickman Hook" class="lazyload" src="/images/game/stickman-hook.png">
                 </div>
               </div>
               <span class="list-game-title">Stickman Hook</span>
